--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 *.java linguist-detectable=false
 *.csharp linguist-detectable=false
 *.js linguist-detectable=false
+*.css linguist-detectable=false
+*.xml linguist-detectable=false
+*.reactjs linguist-detectable=true
